feat: create half-working msbuild configuration

--- a/DotAwait/DotAwait.targets
+++ b/DotAwait/DotAwait.targets
@@ -1,31 +1,42 @@
 <Project>
-  
-  <!--<UsingTask AssemblyFile="$(TargetDir)DotAwait.dll" TaskName="RewriteSourcesTask" />-->
-  <UsingTask AssemblyFile="$(MSBuildThisFileDirectory)..\DotAwait\bin\Debug\netstandard2.0\DotAwait.dll" TaskName="RewriteSourcesTask" />
+  <UsingTask AssemblyFile="$(MSBuildThisFileDirectory)..\DotAwait\bin\Debug\netstandard2.0\DotAwait.dll"
+             TaskName="RewriteSourcesTask" />
 
   <PropertyGroup>
     <RewrittenDir>$(BaseIntermediateOutputPath)$(Configuration)\$(TargetFramework)\Rewritten</RewrittenDir>
-    <OriginalsForIDE>$(BaseIntermediateOutputPath)$(Configuration)\$(TargetFramework)\OriginalsForIDE</OriginalsForIDE>
   </PropertyGroup>
 
-  <Target Name="RewriteSources" Inputs="@(Compile)" Outputs="$(RewrittenDir)\_done.flag" BeforeTargets="CoreCompile">
+  <!-- Добавим таску в цепочку CoreCompile -->
+  <PropertyGroup>
+    <CoreCompileDependsOn>
+      RewriteSources;
+      $(CoreCompileDependsOn)
+    </CoreCompileDependsOn>
+  </PropertyGroup>
+
+  <Target Name="RewriteSources"
+          Inputs="@(Compile)"
+          Outputs="$(RewrittenDir)\_done.flag">
 
     <MakeDir Directories="$(RewrittenDir)" />
 
-    <RewriteSourcesTask Compile="@(Compile)" OutputDirectory="$(RewrittenDir)">
+    <RewriteSourcesTask Compile="@(Compile)"
+                        OutputDirectory="$(RewrittenDir)"
+                        ProjectPath="$(MSBuildProjectFullPath)">
       <Output TaskParameter="RewrittenFiles" ItemName="RewrittenCompile" />
     </RewriteSourcesTask>
-    
-    <Message Text="Rewritede sources: @(RewrittenCompile)" Importance="high" />
 
     <ItemGroup>
+      <_OriginalCompile Include="@(Compile)" />
       <Compile Remove="@(Compile)" />
-      <None Include="@(Compile)" />
       <Compile Include="@(RewrittenCompile)" />
     </ItemGroup>
 
+    <!-- (опционально) добавим оригиналы как None, чтобы не пропадали из IDE -->
+    <ItemGroup>
+      <None Include="@(_OriginalCompile)" Condition="'$(BuildingInsideVisualStudio)' == 'true'" />
+    </ItemGroup>
+
     <WriteLinesToFile File="$(RewrittenDir)\_done.flag" Lines="done" />
-      
   </Target>
-  
 </Project>
