--- a/DotAwait.NuGetPackageTest/DotAwait.NuGetPackageTest.csproj
+++ b/DotAwait.NuGetPackageTest/DotAwait.NuGetPackageTest.csproj
@@ -1,17 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <Import Project="..\DotAwait\DotAwait.props" />
-  <Import Project="..\DotAwait\DotAwait.targets" />
-  
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-  
+
   <ItemGroup>
-    <ProjectReference Include="..\DotAwait\DotAwait.csproj" />
+    <PackageReference Include="DotAwait" Version="1.0.0" />
   </ItemGroup>
 
 </Project>
