--- a/DotAwait.ConsoleTest/DotAwait.ConsoleTest.csproj
+++ b/DotAwait.ConsoleTest/DotAwait.ConsoleTest.csproj
@@ -5,7 +5,8 @@
   
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
+    <LangVersion>latest</LangVersion>
+    <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
