--- a/DotAwait.Build/DotAwait.targets
+++ b/DotAwait.Build/DotAwait.targets
@@ -3,12 +3,11 @@
   <PropertyGroup>
     <DotAwaitTasksDir>$([System.IO.Path]::GetFullPath('$(MSBuildThisFileDirectory)\bin\$(Configuration)\netstandard2.0\'))</DotAwaitTasksDir>
     <DotAwaitDll>$(DotAwaitTasksDir)DotAwait.Build.dll</DotAwaitDll>
-
-    <!-- Rewritten sources live only in obj -->
-    <DotAwaitOut>$(IntermediateOutputPath)dotawait\src\</DotAwaitOut>
+    <DotAwaitIntermediateDir>$(IntermediateOutputPath)dotawait\</DotAwaitIntermediateDir>
+    <DotAwaitOut>$(DotAwaitIntermediateDir)src\</DotAwaitOut>
 
     <!-- Make sure rewritten sources are never picked up by wildcards (esp. in design-time) -->
-    <DefaultItemExcludes>$(DefaultItemExcludes);$(IntermediateOutputPath)dotawait\**\*.cs</DefaultItemExcludes>
+    <DefaultItemExcludes>$(DefaultItemExcludes);$(DotAwaitIntermediateDir)**\*.cs</DefaultItemExcludes>
 
     <_DotAwaitOutLower>$([System.String]::Copy('$(DotAwaitOut)').ToLowerInvariant())</_DotAwaitOutLower>
     <_BaseIntLower>$([System.String]::Copy('$(BaseIntermediateOutputPath)').ToLowerInvariant())</_BaseIntLower>
@@ -18,6 +17,15 @@
              AssemblyFile="$(DotAwaitDll)"
              Condition="Exists('$(DotAwaitDll)')"
              TaskFactory="TaskHostFactory" />
+
+  <!-- Delete DotAwait intermediate outputs on Clean (Project > Clean / dotnet clean) -->
+  <Target Name="DotAwait_Clean"
+          AfterTargets="Clean"
+          Condition="Exists('$(DotAwaitIntermediateDir)')">
+
+    <RemoveDir Directories="$(DotAwaitIntermediateDir)" />
+
+  </Target>
 
   <!-- Build-time only: do NOT affect IntelliSense / design-time compilation -->
   <Target Name="DotAwait_Rewrite"
