--- a/DotAwait/DotAwait.csproj
+++ b/DotAwait/DotAwait.csproj
@@ -5,17 +5,16 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
-    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="build\**\*.cs" />
+    <Compile Remove="build\**" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="build\**\*." Pack="true" PackagePath="buildTransitive\" />
-    <None Include="build\**\*.cs" Visible="True" />
+    <None Include="build\**" Pack="true" PackagePath="buildTransitive\" />
   </ItemGroup>
 
   <ItemGroup>
