--- a/DotAwait/buildTransitive/DotAwait.props
+++ b/DotAwait/buildTransitive/DotAwait.props
@@ -5,7 +5,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Include="$(MSBuildThisFileDirectory)injected\**" Visible="False" />
+    <Compile Include="$(MSBuildThisFileDirectory)injected\**" Visible="false" />
   </ItemGroup>
 
 </Project>
