--- a/DotAwait/DotAwait.csproj
+++ b/DotAwait/DotAwait.csproj
@@ -57,4 +57,8 @@
     </ItemGroup>
   </Target>
 
+  <Target Name="CleanTools" AfterTargets="Clean" Condition="Exists('$(_BuildTransitiveToolsDirectory)')">
+    <RemoveDir Directories="$(_BuildTransitiveToolsDirectory)" />
+  </Target>
+
 </Project>
