feat: rework injected files into content files

--- a/DotAwait.ConsoleTest/DotAwait.ConsoleTest.csproj
+++ b/DotAwait.ConsoleTest/DotAwait.ConsoleTest.csproj
@@ -2,6 +2,10 @@
 
   <Import Project="..\DotAwait\buildTransitive\DotAwait.props" />
   <Import Project="..\DotAwait\buildTransitive\DotAwait.targets" />
+
+  <ItemGroup>
+    <Compile Include="..\DotAwait\contentFiles\cs\any\**" Visible="false" />
+  </ItemGroup>
   
   <PropertyGroup>
     <OutputType>Exe</OutputType>
