--- a/DotAwait/buildTransitive/DotAwait.props
+++ b/DotAwait/buildTransitive/DotAwait.props
@@ -5,8 +5,10 @@
   </ItemGroup>
 
   <!-- Hide content files -->
-  <Compile Update="@(Compile)">
-    <Visible Condition="'%(NuGetItemType)' == 'Compile' and '%(NuGetPackageId)' == 'DotAwait'">false</Visible>
-  </Compile>
+  <ItemGroup>
+    <Compile Update="@(Compile)">
+      <Visible Condition="'%(NuGetItemType)' == 'Compile' and '%(NuGetPackageId)' == 'DotAwait'">false</Visible>
+    </Compile>
+  </ItemGroup>
 
 </Project>
