--- a/NuGet.Config
+++ b/NuGet.Config
@@ -4,6 +4,7 @@
   <packageSources>
     <clear />
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
+    <add key="local" value="DotAwait\bin\Debug" />
   </packageSources>
 
   <packageSourceMapping>
