--- a/DotAwait/DotAwait.csproj
+++ b/DotAwait/DotAwait.csproj
@@ -20,6 +20,7 @@
     <RepositoryUrl>https://github.com/iiKuzmychov/DotAwait</RepositoryUrl>
     <PackageTags>dotawait;.await;await;async;fluent;linq;task;valuetask</PackageTags>
     <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageIcon>icon.png</PackageIcon>
     <VersionPrefix>1.0.0</VersionPrefix>
     <VersionSuffix Condition="'$(VersionSuffix)' == ''">dev.$([System.DateTime]::UtcNow.ToString('yyyyMMddHHmmss'))</VersionSuffix>
   </PropertyGroup>
