--- a/tests/DotAwait.ConsoleTest/DotAwait.ConsoleTest.csproj
+++ b/tests/DotAwait.ConsoleTest/DotAwait.ConsoleTest.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="DotAwait" Version="*-*" />
   </ItemGroup>
 
+  <PropertyGroup>
+    <DotAwaitImplicitUsings>enabled</DotAwaitImplicitUsings>
+  </PropertyGroup>
+
 </Project>
