--- a/src/DotAwait/buildTransitive/DotAwait.props
+++ b/src/DotAwait/buildTransitive/DotAwait.props
@@ -1,16 +1,10 @@
 <Project>
   
+  <!-- Implicit usings -->
   <PropertyGroup>
     <DotAwaitImplicitUsings Condition="'$(DotAwaitImplicitUsings)'==''">enable</DotAwaitImplicitUsings>
     <DotAwaitImplicitUsings>$([System.String]::Copy('$(DotAwaitImplicitUsings)').ToLowerInvariant())</DotAwaitImplicitUsings>
   </PropertyGroup>
-
-  <!-- validation -->
-  <Target Name="ValidateDotAwaitImplicitUsings" BeforeTargets="PrepareForBuild">
-    <Error
-      Condition="'$(DotAwaitImplicitUsings)' != 'enable' and '$(DotAwaitImplicitUsings)' != 'disable'"
-      Text="DotAwaitImplicitUsings must be 'enable' or 'disabled'. Current value: '$(DotAwaitImplicitUsings)'." />
-  </Target>
 
   <ItemGroup Condition="'$(DotAwaitImplicitUsings)' == 'enable'">
     <Using Include="DotAwait" />
